--- a/doc/cie/cie.tex
+++ b/doc/cie/cie.tex
@@ -38,7 +38,19 @@
 \VerbatimInput[xleftmargin=1.5em,fontsize=\scriptsize]{#1}}
 
 % To show source
-\DefineVerbatimEnvironment{source}{Verbatim}{xleftmargin=1.5em,fontsize=\footnotesize}
+\DefineVerbatimEnvironment{source}{Verbatim}%
+{xleftmargin=1.5em,fontsize=\footnotesize,commandchars=\\\{\}}
+
+\newcommand{\iTo}{$\to$}
+\newcommand{\iForall}{$\forall$}
+\newcommand{\iOr}{$\lor$}
+\newcommand{\iAnd}{$\land$}
+\newcommand{\iImply}{$\Rightarrow$}
+\newcommand{\iNot}{$\lnot$}
+\newcommand{\iExists}{$\exists$}
+\newcommand{\iExistsOne}{$\exists!$}
+\newcommand{\iT}[1]{$\|$#1$\|$}
+\newcommand{\iPer}[1]{$\approx_{\mathtt{#1}}$}
 
 % Use these environents to display input and otput in LaTeXified mode
 \newenvironment{showInput}{\[\begin{array}{l}}{\end{array}\]}
